useful/scss/flexbox/flexbox.scss
/**
 * @title Flexbox
 * @description Quickly solution to use flexbox around the projects
*/
.flexbox {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;

    &.flex {
        &-1 {
            flex: 1;
        }

        &-2 {
            flex: 2;
        }

        &-3 {
            flex: 3;
        }

        &-4 {
            flex: 4;
        }

        &-5 {
            flex: 5;
        }

        &-6 {
            flex: 6;
        }

        &-7 {
            flex: 7;
        }

        &-8 {
            flex: 8;
        }

        &-9 {
            flex: 9;
        }

        &-10 {
            flex: 10;
        }
    }

    &.justify-center {
        justify-content: center;
    }
    
    &.align-items-center {
        align-items: center;
    }
}

.flex {
    display: flex;

    &.flex {
        &-1 {
            flex: 1;
        }

        &-2 {
            flex: 2;
        }

        &-3 {
            flex: 3;
        }

        &-4 {
            flex: 4;
        }

        &-5 {
            flex: 5;
        }

        &-6 {
            flex: 6;
        }

        &-7 {
            flex: 7;
        }

        &-8 {
            flex: 8;
        }

        &-9 {
            flex: 9;
        }

        &-10 {
            flex: 10;
        }
    }

    &.align-self-center {
        align-self: center;
    }
    
    &.align-self-end {
        align-self: flex-end;
    }
}

.justify {
    &-center {
        justify-content: center;
    }
}

.align {
    &-items {
        &-center {
            align-items: center;
        }
    }
}

